<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PlayActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/blue_dark"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Back ImageView acting like Button of Play activity: -->
        <ImageView
            android:id="@+id/playBackBtn"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:clickable="true"
            android:contentDescription="@string/back_btn"
            android:onClick="OnBackBtnClick"
            app:srcCompat="@drawable/back_btn"
            android:focusable="true"
            tools:ignore="UsingOnClickInXml" />

        <!-- TextViews displaying clarifying text for corresponding TextViews in the next LinearLayout of Play activity: -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:background="#00FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playTimeText"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#00FFFFFF"
                android:gravity="end"
                android:text="@string/play_timer"
                android:textColor="@color/beige_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/playBombText"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#00FFFFFF"
                android:gravity="end"
                android:text="@string/play_bombs"
                android:textColor="@color/beige_dark"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- TextViews displaying how much time spent and number of bombs of Play activity: -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:background="#00FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playTime"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#00FFFFFF"
                android:text="@string/play_time"
                android:textColor="@color/beige_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/playBomb"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#00FFFFFF"
                android:text="@string/play_bombsCount"
                android:textColor="@color/beige_dark"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- Restart ImageView acting like Button of Play activity: -->
        <ImageView
            android:id="@+id/playReBtn"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:clickable="true"
            android:contentDescription="@string/re_btn"
            android:onClick="OnReBtnClick"
            app:srcCompat="@drawable/re_btn"
            android:focusable="true"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <!-- Field displaying Game of Play activity: -->
    <com.example.minesweeper.PlayClasses.Field
        android:id="@+id/playGrid"
        android:layout_width="380dp"
        android:layout_height="380dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <!-- TextView displaying wins or loses messages -->
    <TextView
        android:id="@+id/playText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playGrid" />

</androidx.constraintlayout.widget.ConstraintLayout>